--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^4.7.0",
     "express": "^4.17.1",
     "firebase": "^7.14.0",
     "firebase-admin": "^8.10.0",
     "hbs": "^4.1.1",
+    "multer": "^1.4.2",
     "sha1": "^1.1.1"
   }
 }
