--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "firebase": "^7.14.0",
     "firebase-admin": "^8.10.0",
     "hbs": "^4.1.1",
