--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "firebase": "^7.14.0",
