--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.14.0",
     "firebase-admin": "^8.10.0",
     "hbs": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "sha1": "^1.1.1"
   }
